syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

enum AccountType {
  UNKNOWN = 0;
  ADMIN = 1;
  STUDENT = 2;
  ACCOUNTANT = 3;
}

message Account {
  string id = 1;
  repeated string user_ids = 2;
  repeated string admin_user_ids = 3;
  string name = 4;
  string image_url = 5;
  AccountType type = 6;
  bool auto_order = 7;
}
