syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message MonthlyUsage {
  string id = 1;
  string student_account_id = 2;
  double year = 3;
  double month = 4;
  double amount_kwh = 5;
}
