syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message PrimaryAsk {
  string id = 1;
  string account_id = 2;
  string price_ujpy = 3;
  string amount_uupx = 4;
}
