syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message StudentAccount {
  string id = 1;
  repeated string user_ids = 2;
  string name = 3;
  string payment_method = 4;
  string xrp_address = 5;
}
